...
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:clipChildren="false"
            android:paddingTop="@dimen/default_navigator_header_margin_top">

            <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
                android:id="@+id/book_library_refresh"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:clipChildren="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
...
                    android:layout_height="match_parent"
                    android:clipChildren="false"
                    android:clipToPadding="false">
                    <include layout="@layout/skeleton_shimmer_layout"/>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/book_library_recycler_view"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scrollbars="vertical"
                        android:layout_centerHorizontal="true"
                        android:columnCount="3"
                        android:clipToPadding="false"
...
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <FrameLayout
            android:id="@+id/book_library_popup_menu_library"
            style="@style/AppBackground.PopupBottom"
            android:layout_width="match_parent"
            android:layout_height="450dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingTop="1dp"
...
